substrate/primitives/runtime/proc-macro/tests/ui/wrong_input4.stderr
error: unexpected token
  --> tests/ui/wrong_input4.rs:20:60
   |
20 | #[with_features_try_runtime_and_runtime_benchmarks(feature "std")]
   |                                                            ^^^^^
